--- a/server.cfg
+++ b/server.cfg
@@ -1,7 +1,8 @@
-### AUTOMATICALY SET BY PTERODACTYL ###
 # Only change the IP if you're using a server with multiple network interfaces, otherwise change the port only.
 endpoint_add_tcp "0.0.0.0:30120"
 endpoint_add_udp "0.0.0.0:30120"
+add_ace resource.redem command.add_principal allow
+add_ace resource.redem command.add_ace allow
 
 # Server player slot limit (see https://fivem.net/server-hosting for limits)
 sv_maxclients 48
@@ -18,10 +19,12 @@ set sv_licenseKey
 ensure mapmanager
 ensure chat
 ensure spawnmanager
-ensure sessionmanager
+ensure sessionmanager-rdr3
 ensure fivem
 ensure hardcap
 ensure rconlog
+ensure scoreboard
+ensure redm-map-one
 
 # This allows players to use scripthook-based plugins such as the legacy Lambda Menu.
 # Set this to 1 to allow scripthook. Do note that this does _not_ guarantee players won't be able to use external plugins.
@@ -48,13 +51,13 @@ sets locale "root-AQ"
 #sets banner_connecting "https://url.to/image.png"
 
 # Set your server's hostname
-sv_hostname "New FiveM Server with Pterodactyl"
+sv_hostname "New RedM Server with Open All"
 
 # Set your server's Project Name
-sets sv_projectName "My Pterodactyl Project"
+sets sv_projectName "My RedM project"
 
 # Set your server's Project Description
-sets sv_projectDesc "Default Pterodactyl requiring configuration"
+sets sv_projectDesc "Default description"
 
 # Nested configs!
 #exec resources.cfg
